--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "apollo-boost": "^0.4.4",
     "core-js": "^3.3.2",
     "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
     "vue": "^2.6.10",
     "vue-apollo": "^3.0.0"
   },
